docs:  add documentation for showOpeningHadler
